--- a/config.yaml.example
+++ b/config.yaml.example
@@ -14,6 +14,9 @@ proxy:
   password:
 
 firewatch:
+  trusted_op_id: # operator id list
+    - me
+    # - 0000000000
   watch:
     - # dup as many u wish
       chat_id:
